# Augmentor

./: .gitignore  build.py  pyproject.toml
augmentor/: noise.py  perturb.py
augmentor/imgaug/: __init__.py  dtypes.py  imgaug.py  parameters.py  random.py
augmentor/imgaug/augmentables/: __init__.py  base.py  batches.py  normalization.py  utils.py
augmentor/imgaug/augmenters/: __init__.py  arithmetic.py  meta.py
augmentor/warping/: warping.py
test/: test_warp.py
